Prevent double scrollbars for flexbox parents
Previously attempting to use SimpleBar in a parent with "display: flex"
without specifying a height or "overflow: hidden" on the host element,
resulted in two scroll bars being displayed SimpleBar and the native one.

Fixes #473.

--- a/packages/simplebar/src/simplebar.css
+++ b/packages/simplebar/src/simplebar.css
@@ -5,6 +5,7 @@
   justify-content: flex-start;
   align-content: flex-start;
   align-items: flex-start;
+  max-height: 100%;
 }
 
 .simplebar-wrapper {
